# tagstr-site

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  LICENSE  Makefile  README.md  genindex.html  htmlbuilder.html  index.html  objects.inv  package-lock.json  pyproject.toml  search.html  searchindex.js  tutorial.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  (+3 more)
playground/: .gitignore  README.md  index.html  jupyter-lite.json  jupyter_lite_config.json  pyproject.toml
playground/api/contents/: all.json
playground/consoles/: index.html
playground/edit/: index.html
playground/extensions/@jupyter-notebook/lab-extension/: package.json
playground/extensions/@jupyter-notebook/lab-extension/static/: 568.0e9bcd74ae36ad68f70e.js  804.2cd86c0d29e544a308c0.js  928.768a77db06802599fa5d.js  remoteEntry.8cdb5c12db85ac589ef4.js  third-party-licenses.json
playground/extensions/@jupyterlite/pyodide-kernel-extension/: package.json
playground/files/: greet.ipynb
playground/lab/: index.html
playground/notebooks/: index.html
playground/pyodide/: Jinja2-3.1.3-py3-none-any.whl  annotated-types-tests.tar  annotated_types-0.7.0-py3-none-any.whl  asttokens-3.0.0-py3-none-any.whl  atomicwrites-1.4.1-py2.py3-none-any.whl  atomicwrites-1.4.1-py2.py3-none-any.whl.metadata  attrs-23.2.0-py3-none-any.whl  attrs-25.2.0-py3-none-any.whl  buffer_test-0.1.1-cp314-cp314-pyodide_2024_0_wasm32.whl  buffer_test-0.1.1-cp314-cp314-pyodide_2025_0_wasm32.whl  buffer_test-0.1.1-cp314-cp314-pyodide_2025_0_wasm32.whl.metadata  contourpy-1.3.1-cp314-cp314-pyodide_2025_0_wasm32.whl  cpp_exceptions_test2-1.0-cp314-cp314-pyodide_2024_0_wasm32.whl  cpp_exceptions_test2-1.0-cp314-cp314-pyodide_2024_0_wasm32.whl.metadata  cpp_exceptions_test2-1.0-cp314-cp314-pyodide_2025_0_wasm32.whl  cycler-0.12.1-py3-none-any.whl  decorator-5.2.1-py3-none-any.whl  exceptiongroup-1.2.1-py3-none-any.whl  exceptiongroup-1.2.2-py3-none-any.whl  executing-2.2.0-py2.py3-none-any.whl  ffi.d.ts  fonttools-4.56.0-py3-none-any.whl  fpcast_test-0.1.1-cp314-cp314-pyodide_2024_0_wasm32.whl  fpcast_test-0.1.1-cp314-cp314-pyodide_2024_0_wasm32.whl.metadata  fpcast_test-0.1.1-cp314-cp314-pyodide_2025_0_wasm32.whl  hashlib-1.0.0-cp314-cp314-pyodide_2024_0_wasm32.whl  hashlib-1.0.0-cp314-cp314-pyodide_2025_0_wasm32.whl  iniconfig-2.0.0-py3-none-any.whl  ipython-9.2.0-py3-none-any.whl  ipython-tests.tar  jinja2-3.1.6-py3-none-any.whl  kiwisolver-1.4.8-cp314-cp314-pyodide_2025_0_wasm32.whl  kiwisolver-1.4.8-cp314-cp314-pyodide_2025_0_wasm32.whl.metadata  lzma-1.0.0-cp314-cp314-pyodide_2024_0_wasm32.whl  lzma-1.0.0-cp314-cp314-pyodide_2025_0_wasm32.whl  markupsafe-2.1.5-cp314-cp314-pyodide_2024_0_wasm32.whl  markupsafe-2.1.5-cp314-cp314-pyodide_2024_0_wasm32.whl.metadata  markupsafe-3.0.2-cp314-cp314-pyodide_2025_0_wasm32.whl  matplotlib-tests.tar  matplotlib_inline-0.1.7-py3-none-any.whl  (+66 more)
playground/pypi/: all.json  ipython-8.26.0-py3-none-any.whl  tagstr_site-0.0.1-py2.py3-none-any.whl
playground/repl/: index.html
playground/tree/: index.html
(+128 files in other folders)
