[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagstr_site"
version = "0.0.1"
description = "Collection of tag string demos, docs, and contributions."
requires-python = ">=3.12"
dependencies = [
    "pytest~=7.4.3",
    "sphinx~=7.3",
    "sphinx-book-theme~=1.1",
    "pytest-sphinx",
    "sybil",
    "myst-parser~=3.0",
]


[project.optional-dependencies]
jupyterlite = [
    "jupyterlite-core[all]~=0.3.0",
    "jupyterlite-pyodide-kernel~=0.3.2",
    "ipython~=8.26.0",
    "sphinx-autobuild"
]

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules --ignore-glob='**/_build/**'"
# testpaths = ["docs", "tests"]
testpaths = ["tests"]
