[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagstr_site"
version = "0.0.1"
description = "Collection of tag string demos, docs, and contributions."
requires-python = ">=3.12"
dependencies = [
    "pytest~=7.4.3",
    "sphinx~=7.3",
    "sphinx-book-theme~=1.1",
    "pytest-sphinx",
    "sybil",
    "myst-parser~=3.0",
]


[project.optional-dependencies]
jupyterlite = [
    "jupyterlite-core[all]~=0.4.0",
    "jupyterlite-pyodide-kernel~=0.4.1",
    "ipython~=8.26.0",
    # See https://github.com/ipython/ipython/issues/14303#issuecomment-1925423956
    "executing@git+https://github.com/alexmojaki/executing@3.13#egg=executing",
    "sphinx-autobuild"
]

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules --ignore-glob='**/_build/**'"
# testpaths = ["docs", "tests"]
testpaths = ["tests"]

[tool.distutils.bdist_wheel]
universal = true