[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagstr_site"
version = "0.0.1"
description = "Collection of tag string demos, docs, and contributions."
requires-python = ">=3.12"
dependencies = [
    "pytest~=7.4.3",
    "sphinx~=7.3",
    "sphinx-book-theme~=1.1",
    "pytest-sphinx",
    "sybil",
    "myst-parser~=3.0",
]


[project.optional-dependencies]
jupyterlite = [
    "jupyterlite-core[all]==0.6.0a10",
    "jupyterlite-pyodide-kernel==0.6.0a6",
    "sphinx-autobuild",
    "attrs==23.2.0", # The version 24.2.0 supports only latest Python 3.14 codebase
]

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules --ignore-glob='**/_build/**'"
# testpaths = ["docs", "tests"]
testpaths = ["tests"]

[tool.distutils.bdist_wheel]
universal = true