[tool.poetry]
name = "tagstr-playground"
version = "0.1.0"
description = ""
authors = ["Koudai Aono <koxudaxi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlite-core = {extras = ["all"], version = "^0.2.0"}
jupyterlite-pyodide-kernel = "^0.2.0"
ipython = { version = "8.17.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
